# signal-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  glama.json  pyproject.toml  smithery.yaml
.github/workflows/: publish.yml  test.yml
src/signal_mcp/: __init__.py  cli.py  client.py  config.py  desktop.py  models.py  server.py  store.py  translation.py  webhook.py
tests/: test_cli.py  test_cli_coverage.py  test_client.py  test_client_coverage.py  test_config_coverage.py  test_desktop.py  test_server.py  test_server_coverage.py  test_store.py  test_store_coverage.py  test_translation.py
